# done

./: Cargo.toml  README.md  build.rs  meson.build  meson_options.txt
build-aux/: .gitignore  build.sh  com.github.linruohan.mydone.Devel.json  com.github.linruohan.mydone.Devel.yaml  deploy-remote.sh  mydone_inno.iss.in  mytool_inno.iss.in
core/src/: meson.build  service.rs
data/: app.desktop.in.in  app.gschema.xml.in  app.metainfo.xml.in.in  app.mimetype.xml.in  meson.build  resources.gresource.xml
data/ui/: style.css
src/: app.rs  main.rs  meson.build
src/app/components/: about_dialog.rs  content.rs  delete.rs  list_dialog.rs  list_sidebar.rs  preferences.rs  services.rs  task_input.rs  welcome.rs
src/app/config/: actions.rs  gettext.rs  info.rs  localization.rs  meson.build  resources.rs  setup.rs
src/app/factories/: service.rs  task.rs  task_list.rs
src/app/factories/sub_tasks/: factory.rs
src/app/models/: sidebar_list.rs
