[package]
name = "mydone"
version = "0.2.2"
edition = "2024"
license = "MPL 2.0"
description = "Done is the ultimate task management solution for seamless organization and efficiency. "
repository = "https://github.com/github/done/"

[workspace]
members = ["core"]

[dependencies]
i18n-embed-fl = "0.9.2"
once_cell = "1.20.2"
derive-new = "0.7.0"
anyhow = "1.0.94"
strum = "0.26.3"
strum_macros = "0.26.4"
glib = "0.20.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = "0.12.9"
futures = "0.3.31"
libset = "0.1.6"
dirs = "5.0.1"
relm4-icons = "0.10.0-beta.1"
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_5"] }

[dependencies.done_core]
path = "core"

[dependencies.chrono]
version = "0.4.39"
features = ["serde"]

[dependencies.relm4]
version = "0.9.1"
features = ["macros", "libadwaita", "gnome_45"]


[dependencies.serde]
version = "1.0.216"
features = ["derive"]


[dependencies.rust-embed]
version = "8.5.0"
features = ["debug-embed"]

[dependencies.i18n-embed]
version = "0.15.2"
features = ["fluent-system", "desktop-requester"]


[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.17"

[build-dependencies]
glib-build-tools = "0.20"
anyhow = "1.0"
relm4-icons-build = "0.10.0-beta.1"

[profile.dev]
debug = true
opt-level = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false
