# Specify sources
mytool_core_sources = files(
'lib.rs',
'models/list.rs',
'models/mod.rs',
'models/priority.rs',
'models/recurrence.rs',
'models/status.rs',
'models/task.rs',
'schema.rs',
'service.rs',
'services/local/database/mod.rs',
'services/local/database/models/list.rs',
'services/local/database/models/mod.rs',
'services/local/database/models/task.rs',
'services/local/mod.rs',
'services/local/service.rs',
'services/microsoft/mod.rs',
'services/microsoft/models/body.rs',
'services/microsoft/models/checklist_item.rs',
'services/microsoft/models/collection.rs',
'services/microsoft/models/date_time_zone.rs',
'services/microsoft/models/importance.rs',
'services/microsoft/models/list.rs',
'services/microsoft/models/mod.rs',
'services/microsoft/models/recurrence.rs',
'services/microsoft/models/status.rs',
'services/microsoft/models/task.rs',
'services/microsoft/models/token.rs',
'services/microsoft/service.rs',
'services/mod.rs',
'services/smart.rs',
'task_service.rs',
)
